gateways/gw.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: gw
  namespace: ingress-gw
spec:
  gatewayClassName: gloo-gateway-v2
  infrastructure:
    parametersRef:
      name: custom-gw-params
      group: gloo.solo.io
      kind: GlooGatewayParameters   
  listeners:
    - protocol: HTTP
      port: 80
      name: http
      allowedRoutes:
        namespaces:
          # from: Same
          # from: All
          from: Selector # Only allow routes from namespaces with the following label set.
          selector:
            matchLabels:
              shared-gateway-access: "true"
        # Define which kinds of routes we accept
        # kinds:
